--- a/public/css/app.css
+++ b/public/css/app.css
@@ -188,6 +188,17 @@ body {
     font-weight: bold;
 }
 
+.form {
+    margin: 30px;
+}
+
+.bt {
+    color: rgb(255, 255, 255);
+}
+.bt:hover {
+    color: rgb(255, 255, 255);
+}
+
 @media screen and (max-width: 991px) {
     .top_footer .footer_list {
         margin-top: 50px;
